update i3 and i3status

--- a/i3status/config
+++ b/i3status/config
@@ -1,10 +1,17 @@
 # i3status configuration file.
+# see "man i3status" for documentation.
+
+# It is important that this file is edited as UTF-8.
+# The following line should contain a sharp s:
+# ß
+# If the above line is not correctly displayed, fix your editor first!
 
 general {
         colors = true
         interval = 5
 }
 
+order += "disk /"
 order += "disk /home"
 order += "memory"
 order += "cpu_usage"
@@ -71,7 +78,12 @@ memory {
         separator_block_width = 35
 }
 
+disk / {
+        format = "root: %free"
+        separator_block_width = 35
+}
+
 disk /home {
-        format = "lv_home: %free"
+        format = "home: %free"
         separator_block_width = 35
 }
